sbi-manifests/sbi-cms-issuance-support-extn/sbi-cms/templates/deployment.yaml
---
# Source: sbi-cms/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbi-cms-issuance-support-extn
  namespace: sbi
  labels:
    app: sbi-cms-issuance-support-extn
    intent: apps
spec:
  selector:
    matchLabels:
      app: sbi-cms-issuance-support-extn
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sbi-cms-issuance-support-extn
        intent: apps
      annotations:
        kubernetes.io/psp: eks.privileged
        "fss.com/app-configmap-hash": 5bddfb486f1865df5a78322543b2ec0ab1391fefbc27d55a0c976132725db3c7
    spec:
      volumes:
      containers:
        - name: sbi-cms-issuance-support-extn
          image: 736483234466.dkr.ecr.ap-south-1.amazonaws.com/sbi-cms-issuance-support-extn:sbi-uat.v104
          volumeMounts:
          ports:
            - containerPort: 8057
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      nodeSelector:
        app: sbi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
