sbi-manifests/sbi-cms-issuance-support-extn/sbi-cms/templates/service.yaml
---
# Source: sbi-cms/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbi-cms-issuance-support-extn
  namespace: sbi
  labels:
    app: sbi-cms-issuance-support-extn
  annotations: 
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8057-8057'
    prometheus.io/scrape: 'true'
spec:
  ports:
    - protocol: TCP
      port: 8057
      targetPort: 8057
      name: 8057-8057
  selector:
    app: sbi-cms-issuance-support-extn
  type: ClusterIP
